Changed edit page to add/remove part categories

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -45,6 +45,23 @@
 }
 
 
+.about-top-bar {
+    vertical-align: center;
+
+}
+
+.about-top-bar img {
+    width: 100%;
+    height: auto;
+}
+
+
+
+
+
+
+
+
 .btn.btn-skinny{
     padding-right: 5px;
     padding-left: 5px;
