--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -143,8 +143,9 @@
             <table>
                 <tr>
                     <td align="left" height=100%><img class="button-pic" src="/app/static/img/RiceBikesLogo.png" alt="Logo"/></td>
-                    <td align="left" width="25%">
-                        <p class="links"><a href="/" >HOME</a> | <a href="/login">LOGIN</a></p>
+
+                    <td align="left" width="30%">
+                        <p class="links"><a href="/login">LOGIN</a> <a href="/" >HOME |&nbsp</a> </p>
                     </td>
                 </tr>
 
