--- a/app/templates/app/balance.html
+++ b/app/templates/app/balance.html
@@ -37,7 +37,9 @@
             {% if update.transaction != None %}
                 <td><a href="{% url 'app:detail_1' 'balance' update.transaction.id %}">T-{{ update.transaction.id }}</a></td>
             {% elif update.order != None %}
-                <td><a href="{% url 'app:edit_order' 'balance' update.order.id %}">P-{{ update.order_id }} </a></td>
+                <td><a href="{% url 'app:edit_order' 'balance' update.order.id %}">P-{{ update.order.id }} </a></td>
+            {% elif update.misc_revenue_update != None %}
+                <td><a href="{% url 'app:edit_misc_revenue_update' update.misc_revenue_update.id %}">M-{{ update.misc_revenue_update.id }} </a></td>
             {% else %}
                 <td><a href="javascript:return false;">-</a></td>
             {% endif %}
