Added my description to the about page.

--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -190,10 +190,10 @@
                         </td>
                         <td valign="top">
                             <div class="bio">
-                                <p class="name">Eddie Dugan, ELEC/CS '18</p>
+                                <p class="name">Eddie Dugan, CS '18</p>
                                 <p class="position">DEVELOPER</p><br/>
-                                <p class="text">Kevin is a bit of a dork. He is also needlessly obsessive over UI/UX design.</p>
-                                <p class="text"><a href="mailto:kevinlin@rice.edu">kevinlin@rice.edu</a></p>
+                                <p class="text">Eddie is a Computer Science major, lives at Martel, and enjoys videogames and live music.</p>
+                                <p class="text"><a href="mailto:ejd6@rice.edu">ejd6@rice.edu</a></p>
                             </div>
                         </td>
                     </tr>
