added my info to the about page.

--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -186,7 +186,7 @@
                 <table width="100%">
                     <tr>
                         <td width="200px" valign="top">
-                            <img class="profileimage" src="http://i.imgur.com/KipGDvZ.png"/>
+                            <img class="profileimage" src="http://i.imgur.com/TxzajGw.png"/>
                         </td>
                         <td valign="top">
                             <div class="bio">
