Changed about page

--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -174,7 +174,7 @@
                             <div class="bio">
                                 <p class="name">Jonathan Wilson, CS '15</p>
                                 <p class="position">LEAD DEVELOPER</p><br/>
-                                <p class="text">Jonathan is the lead developer for the Rice Bikes app of Rice Apps. Outside of coding web apps, you can find him bouncing on trampolines and sprung floors.</p>
+                                <p class="text">Jonathan is the lead developer for the Rice Bikes app of Rice Apps. When he's not coding web apps, he enjoys bouncing on trampolines and sprung floors.</p>
                                 <p class="text"><a href="mailto:aqt1@rice.edu">jdw172@gmail.com</a></p>
                             </div>
                         </td>
@@ -186,7 +186,7 @@
                 <table width="100%">
                     <tr>
                         <td width="200px" valign="top">
-                            <img class="profileimage" src="http://i.imgur.com/TxzajGw.png"/>
+                            <img class="profileimage" src="http://i.imgur.com/GaD3P69.png"/>
                         </td>
                         <td valign="top">
                             <div class="bio">
