--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -114,7 +114,7 @@ text-align:left;
 
 #footercontainer {
     width: 100%;
-    height: 5%;
+    height: 15px;
     bottom: 0;
     background: #F0F0F0;
 }
