--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -3,9 +3,8 @@
 {% block content %}
 <br>
 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-    <a href="/rental" class="btn btn-default btn-lg btn-skinny" role="button" name='rental'>Rental</a>
-    <a href="/refurbished" class="btn btn-default btn-lg btn-skinny" role="button" name='refurbished'>Refurb</a>
-    <a href="{% url 'app:used_parts' %}" class="btn btn-default btn-lg btn-skinny" role="button" name="parts">Parts</a>
+    <a href="{% url 'app:bike_inventory' %}" class="btn btn-default btn-lg btn-skinny" role="button" >Our Bikes</a>
+    <a href="{% url 'app:sold_items' %}" class="btn btn-default btn-lg btn-skinny" role="button" >Sold Items</a>
 </div>
 {% if transactions_list %}
     <h3>Active Customers</h3>
