--- a/app/templates/app/detail_base.html
+++ b/app/templates/app/detail_base.html
@@ -60,31 +60,8 @@
     </div>
 </div>
 
-<div class="panel panel-primary">
-    <div class="panel-heading panel-heading-tight">
-        <h3>Categories</h3>
-    </div>
 
-    <div class="panel-body parts-panel">
-
-        <table class="table table-striped">
-            <thead>
-                <td class="col-sm-3"><b>Category</b></td>
-                <td class="col-sm-1"><b>Price</b></td>
-                <td class="col-sm-1"><b>Installed</b></td>
-                <td class="col-sm-1"><b>Details</b></td>
-            </thead>
-        {% for part_category in part_categories %}
-            <tr>
-                <td>{{ part_category.get_category_display }}</td>
-                <td> ${{ part_category.price }} </td>
-                <td> {{ part_category.was_used }} </td>
-                <td>{{ part_category.description }}</td>
-            </tr>
-        {% endfor %}
-        </table>
-    </div>
-</div>
+{% if tasks %}
 
 <div class="panel panel-primary">
     <div class="panel-heading panel-heading-tight">
@@ -95,17 +72,93 @@
         <table class="table table-striped">
             <thead>
                 <td class="col-sm-1"><b>Task</b></td>
+                <td class="col-sm-1"><b>Number</b></td>
                 <td class="col-sm-1"><b>Completion Status</b></td>
             </thead>
             {% for task in tasks %}
                 <tr>
                     <td>{{ task.menu_item.name|place_whitespace }} </td>
+                    <td>{{ task.number }}</td>
                     <td>{{ task.completed }}</td>
                 </tr>
             {% endfor %}
         </table>
     </div>
 </div>
+{% endif %}
+
+
+{% if parts %}
+
+<div class="panel panel-primary">
+    <div class="panel-heading panel-heading-tight">
+        <h3>Products</h3>
+    </div>
+
+    <div class="panel-body parts-panel">
+        <table class="table table-striped">
+            <thead>
+                <td class="col-sm-1"><b>Task</b></td>
+                <td class="col-sm-1"><b>Completion Status</b></td>
+            </thead>
+            {% for part in parts %}
+                <tr>
+                    <td>{{ bla }} </td>
+                    <td>{{ bla }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
+{% endif %}
+
+{% if accessories %}
+
+<div class="panel panel-primary">
+    <div class="panel-heading panel-heading-tight">
+        <h3>Products</h3>
+    </div>
+
+    <div class="panel-body parts-panel">
+        <table class="table table-striped">
+            <thead>
+                <td class="col-sm-1"><b>Task</b></td>
+                <td class="col-sm-1"><b>Completion Status</b></td>
+            </thead>
+            {% for accessory in accessories %}
+                <tr>
+                    <td>{{ bla }} </td>
+                    <td>{{ bla }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
+{% endif %}
+
+{% if buy_backs %}
+
+<div class="panel panel-primary">
+    <div class="panel-heading panel-heading-tight">
+        <h3>Products</h3>
+    </div>
+
+    <div class="panel-body parts-panel">
+        <table class="table table-striped">
+            <thead>
+                <td class="col-sm-1"><b>Task</b></td>
+                <td class="col-sm-1"><b>Completion Status</b></td>
+            </thead>
+            {% for buy_back in buy_backs %}
+                <tr>
+                    <td>{{ bla }} </td>
+                    <td>{{ bla }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
+{% endif %}
 
 <div class="panel panel-primary">
     <div class="panel-body parts-panel">
